syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.message";
option java_outer_classname = "MessageDataProto";
option objc_class_prefix = "HLW";
 
package Nanomite.Core.Network.Common;

message U_FileChunk {
	string Version = 1;
	string Id = 2;
	string CreatedDT = 3;
	string ModifiedDT = 4;
	
	string FileId = 5;
	int32 Index = 6;
	bytes Content = 7;
}